--- a/convocatoria.html
+++ b/convocatoria.html
@@ -99,7 +99,7 @@
         					<input type="file" name="novela">
         				</div>
         				<div class='row mb-2 mb-md-5'>
-        	  			<button type="button" class="col-12 principal" data-bs-toggle="modal" href="#formConvocatoria">Enviar</button>
+        	  			<button type="button" class="col-12 principal btn-form" data-bs-toggle="modal" href="#formConvocatoria">Enviar</button>
 						</div>  
 					</form>
 					<div class="d-flex justify-content-center mb-2">
