--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         					<textarea class="col-12 col-lg-9 mb-2 principal" id='mensaje' name='mensaje' placeholder="Dejanos tu mensaje"></textarea>
         				</div>
         				<div class='row mb-3'>
-        	  			<button type="button" class="col-12 principal" data-bs-toggle="modal" href="#formIndex">
+        	  			<button type="button" class="col-12 principal btn-form" data-bs-toggle="modal" href="#formIndex">
         	  				Enviar
         	  			</button>
 						</div>  
@@ -120,7 +120,9 @@
 	        		¡Gracias por contactarnos! Te responderemos a la brevedad.
 	      		</div>
 	      		<div class="modal-footer d-flex justify-content-center">
-	        		<button type="button" class="btn btn-modal" data-bs-dismiss="modal">Cerrar</button>
+	        		<button type="button" class="btn btn-modal" data-bs-dismiss="modal">
+	        			Cerrar
+	        		</button>
 	       		</div>
 	    	</div>
 	  	</div>
