errores de ortografia

--- a/comprar.html
+++ b/comprar.html
@@ -56,7 +56,7 @@
 					<h1 class="titulos">Como Comprar este libro</h1>
 					<p>Hace click debajo y completa el formulario según corresponda.</p>
 					<p>El precio del libro es $1.500. Podes abonar a traves de Mercado Pago o por transferencia bancaria.</p>
-					<p>En Ediciones El Panda creemos en federalizar la cultra, por eso establecimos un solo precio de envio, $400, para todo el pais.</p>
+					<p>En Ediciones El Panda creemos en federalizar la cultura, por eso establecimos un solo precio de envio, $400, para todo el pais.</p>
 					<p>¡Solo completa con tus datos y nosotros nos encargamos el resto!</p>
 					<p>Te va a llegar un mail con la confirmación de compra y los datos para que puedas acercarte a retirar el libro. Si elegiste con envío al momento de despacharlo te mandamos el tracking del correo.</p>
 				</div>
