boton cerrar offcanvas

--- a/comprar.html
+++ b/comprar.html
@@ -53,7 +53,7 @@
 			</div>
 			<div class="col-12 col-xl-6 p-3 mb-3 d-flex flex-wrap align-content-center align-content-xl-start">
 				<div class="mb-2">
-					<h1 class="titulos">Como Comprar este libro</h1>
+					<h1 class="titulos">Como comprar este libro</h1>
 					<p>Hace click debajo y completa el formulario según corresponda.</p>
 					<p>El precio del libro es $1.500. Podes abonar a traves de Mercado Pago o por transferencia bancaria.</p>
 					<p>En Ediciones El Panda creemos en federalizar la cultura, por eso establecimos un solo precio de envio, $400, para todo el pais.</p>
@@ -121,7 +121,7 @@
 	<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 	  	<div class="offcanvas-header">
 	   		<h1 id="offcanvasRightLabel" class="titulos">Completa el formulario</h1>
-	    		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	    		<button type="button" class="offcanvas-btn-close" data-bs-dismiss="offcanvas" aria-label="Close">X</button>
 	  	</div>
 	  	<div class="offcanvas-body">
 			<div class="col-12 mb-3 ">
@@ -220,7 +220,7 @@
 	<div class="offcanvas offcanvas-end offcanvas-mod" tabindex="-1" id="offcanvasRight-retiro" aria-labelledby="offcanvasRightLabel">
 	  	<div class="offcanvas-header">
 	   		<h1 id="offcanvasRightLabel" class="titulos">Completa el formulario</h1>
-	    	<button type="button" class="btn-close text-reset	" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	    	<button type="button" class="offcanvas-btn-close" data-bs-dismiss="offcanvas" aria-label="Close">X</button>
 	  	</div>
 	  	<div class="offcanvas-body">
 			<div class="col-12 mb-3 ">
