--- a/libros.html
+++ b/libros.html
@@ -54,8 +54,8 @@
 			<div class="col-12 col-xl-6 p-2 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
 				<div class="mb-2">
 					<h1 class="titulos">ACERCA DEL COLOSO</h1>
-					<p class="h5">En 1949, a través de una orden secreta, Evita crea el Grupo de Investigación Operativa, una organización científica cuya misión es dotar al gobierno de Perón de un arma definitiva para defenderse de las amenazas cada vez más violentas de parte de las Fuerzas Armadas y de la oposición. El 16 de junio de 1955, un gólem de treinta metros de puro acero quinquenal tendrá su bautismo de fuego en plena Plaza de Mayo, al enfrentar el intento de golpe de Estado.</p>
-					<p class="h5">Con esta batalla épica comienza El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial. Montado sobre una línea de tiempo alternativa y milenaria, el Imperio Justicialista intentará desarrollar toda la potencia de su proyecto sideral y popular.</p>
+					<p>En 1949, a través de una orden secreta, Evita crea el Grupo de Investigación Operativa, una organización científica cuya misión es dotar al gobierno de Perón de un arma definitiva para defenderse de las amenazas cada vez más violentas de parte de las Fuerzas Armadas y de la oposición. El 16 de junio de 1955, un gólem de treinta metros de puro acero quinquenal tendrá su bautismo de fuego en plena Plaza de Mayo, al enfrentar el intento de golpe de Estado.</p>
+					<p>Con esta batalla épica comienza El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial. Montado sobre una línea de tiempo alternativa y milenaria, el Imperio Justicialista intentará desarrollar toda la potencia de su proyecto sideral y popular.</p>
 				</div>
 				<div class="row col-12 p-3 mb-3">
 					<div class="d-flex justify-content-center">
@@ -63,16 +63,16 @@
 					</div>
 				</div>
 				<div class="container principal principal-mod p-3 mb-3">
-					<div class="row">
+					<div class="row mb-2">
 						<h2 class="d-flex justify-content-center subtitulos">Acerca del Autor</h2>
 					</div>
 						<div class="row">
-							<div class="col-12 col-xl-6 p-1 mb-3 d-flex align-content-center align-content-lg-stretch">
+							<div class="col-12 d-flex align-content-center align-content-lg-stretch mb-3">
 								<div class="container d-flex align-self-center justify-content-center">
-									<img class="assets-img" src="fotos/juan2.png" alt="foto autor">
+									<img class="w-100" src="fotos/juan_ruocco.jpg" alt="foto autor">
 								</div>
 							</div>
-							<div class="col-12 col-xl-6 p-1 mb-3 d-flex align-content-center align-content-lg-stretch">
+							<div class="col-12 d-flex align-content-center align-content-lg-stretch">
 							<div class="container">
 								<p>Juan Ruocco es escritor y guionista. Nació en 1987 en la Ciudad de Buenos Aires. Publicó el libro de cuentos Autopista al espacio (2019) y la novela 3220 (2021). Escribe para el suplemento No del diario Página/12, es columnista de cultura pop en Congo.Fm y conduce el podcast Desencriptados.
 								</p>
