seccion el libro

--- a/libros.html
+++ b/libros.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Libros - Ediciones El Panda</title>
+	<title>El Libro - Ediciones El Panda</title>
 	<meta charset=utf-8>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link rel="icon" href="fotos/avatar.png">
+	<link rel="shortcut icon" href="fotos/favicon.ico">
 </head>
 <body>
 	<!-- Header -->
@@ -24,7 +24,7 @@
 			          		<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html">Libros</a>
+			          		<a class="nav-link" href="libros.html">El Libro</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
 			          		<a class="nav-link" href="comprar.html">Comprar</a>
@@ -51,37 +51,50 @@
 					<img class="assets-img" src="fotos/el_coloso_justicialista.jpg" alt="tapa libro">
 				</div>
 			</div>
-			<div class="col-12 col-xl-6 p-2 mb-3 d-flex flex-wrap align-content-center align-content-xl-stretch">
-				<div class="mb-2">
+			<div class="col-12 col-xl-6 p-2 d-flex flex-wrap align-content-center align-content-xl-start">
+				<div class="row col-12 mb-2">
 					<h1 class="titulos">ACERCA DEL COLOSO</h1>
-					<p>En 1949, a través de una orden secreta, Evita crea el Grupo de Investigación Operativa, una organización científica cuya misión es dotar al gobierno de Perón de un arma definitiva para defenderse de las amenazas cada vez más violentas de parte de las Fuerzas Armadas y de la oposición. El 16 de junio de 1955, un gólem de treinta metros de puro acero quinquenal tendrá su bautismo de fuego en plena Plaza de Mayo, al enfrentar el intento de golpe de Estado.</p>
-					<p>Con esta batalla épica comienza El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial. Montado sobre una línea de tiempo alternativa y milenaria, el Imperio Justicialista intentará desarrollar toda la potencia de su proyecto sideral y popular.</p>
+					<p class="mb-1">En 1949, a través de una orden secreta, Evita crea el Grupo de Investigación Operativa, una organización científica cuya misión es dotar al gobierno de Perón de un arma definitiva para defenderse de las amenazas cada vez más violentas de parte de las Fuerzas Armadas y de la oposición.</p>
+					<p class="mb-1">El 16 de junio de 1955, un gólem de treinta metros de puro acero quinquenal tendrá su bautismo de fuego en plena Plaza de Mayo, al enfrentar el intento de golpe de Estado.</p>
+					<p class="mb-1">Con esta batalla épica comienza El Coloso Justicialista, una novela por escenas en la que Juan Ruocco convierte a la Argentina peronista en una potencia espacial. Montado sobre una línea de tiempo alternativa y milenaria, el Imperio Justicialista intentará desarrollar toda la potencia de su proyecto sideral y popular.</p>
 				</div>
-				<div class="row col-12 p-3 mb-3">
+				<div class="row col-12 p-3 mb-1">
 					<div class="d-flex justify-content-center">
-					<a class="btn btn-outline-success btn-comprar " href="comprar.html" role="button">Comprar</a>
+					<a class="btn btn-outline-success btn-comprar" href="comprar.html" role="button">Comprar</a>
 					</div>
 				</div>
-				<div class="container principal principal-mod p-3 mb-3">
-					<div class="row mb-2">
-						<h2 class="d-flex justify-content-center subtitulos">Acerca del Autor</h2>
-					</div>
-						<div class="row">
-							<div class="col-12 d-flex align-content-center align-content-lg-stretch mb-3">
-								<div class="container d-flex align-self-center justify-content-center">
-									<img class="w-100" src="fotos/juan_ruocco.jpg" alt="foto autor">
-								</div>
-							</div>
-							<div class="col-12 d-flex align-content-center align-content-lg-stretch">
-							<div class="container">
-								<p>Juan Ruocco es escritor y guionista. Nació en 1987 en la Ciudad de Buenos Aires. Publicó el libro de cuentos Autopista al espacio (2019) y la novela 3220 (2021). Escribe para el suplemento No del diario Página/12, es columnista de cultura pop en Congo.Fm y conduce el podcast Desencriptados.
-								</p>
-							</div>
-						</div>
-					</div>	
+				<div class="row col-6 p-1 mb-1 d-flex justify-content-center">
+					<img class="bocetos" src="fotos/coloso.jpg" alt="boceto del coloso">
+				</div>
+				<div class="row col-6 p-1 mb-1 d-flex justify-content-center">
+					<img class="bocetos" src="fotos/firma.jpg" alt="firma del boceto">
 				</div>
 			</div>
 		</div>
+	</div>
+	
+	<!-- /Seccion -->
+	
+	<!-- Seccion -->
+	<div class="container principal principal-mod p-3 mb-3">
+		<div class="row mb-2">
+			<h2 class="d-flex justify-content-center subtitulos">Acerca del Autor</h2>
+		</div>
+		<div class="row">
+			<div class="col-12 col-xl-6 d-flex align-content-center align-content-lg-stretch">
+				<div class="container">
+					<p>Juan Ruocco es escritor y guionista. Nació en 1987 en la Ciudad de Buenos Aires. Estudió Filosofía en la UBA.</p>
+					<p>Escribe para el suplemento No del diario Página/12. También publicó textos en el diario El Cronista y en las revistas Apertura, Nueva Sociedad y Cenital. Escribió para Canal Encuentro y Po-ka. Conduce Desencriptados, un podcast sobre criptomonedas para Congo. Escribe de forma regular en su blog <a class="links" href="https://realjuanruocco.substack.com/">realjuanruocco.substack.com</a></p>
+					<p>En 2012 cofundó Velociraptors, una revista que articula ciencia y sociedad con cultura pop. En 2019 publicó Autopista al espacio (Casa Editorial Neptuno), un libro de cuentos de ciencia ficción y ficción extraña, y en 2021 la nouvelle 3220 (Azul Francia Editorial), que trata sobre el coming of age de dos jovenes de clase media.</p> 
+					<p>Vive en el barrio de Agronomía de la Ciudad de Buenos Aires, junto con Agustina, Galia y Neptuno.</p>
+				</div>
+			</div>
+			<div class="col-12 col-xl-6 d-flex align-content-center align-content-lg-stretch">
+				<div class="container">
+					<img class="w-100" src="fotos/juan_ruocco.jpg" alt="foto autor">
+				</div>
+			</div>
+		</div>	
 	</div>
 
 	<!-- /Seccion -->
