--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			          		<a class="nav-link active" aria-current="page" href="#">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html">Libros</a>
+			          		<a class="nav-link" href="libros.html">El Libro</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
 			          		<a class="nav-link" href="comprar.html">Comprar</a>
