--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Somos una editorial que busca ampliar el universo de la literatura argentina de acción y de aventuras, a partir de una propuesta asociativa que coloca a los autores en pie de igualdad con los editores.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link rel="icon" href="fotos/avatar.png">
+	<link rel="shortcut icon" href="fotos/favicon.ico">
 </head>
 <body>
 	<!-- Header -->
@@ -25,7 +25,7 @@
 			          		<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 			          	</li>
 			          	<li class="nav-item">
-			          		<a class="nav-link" href="libros.html">Libros</a>
+			          		<a class="nav-link" href="libros.html">El Libro</a>
 			          	</li>	       		    	
 			          	<li class="nav-item">	
 			          		<a class="nav-link" href="comprar.html">Comprar</a>
