--- a/libros.html
+++ b/libros.html
@@ -74,7 +74,7 @@
 	</div>
 	
 	<!-- /Seccion -->
-	
+
 	<!-- Seccion -->
 	<div class="container principal principal-mod p-3 mb-3">
 		<div class="row mb-2">
@@ -84,7 +84,8 @@
 			<div class="col-12 col-xl-6 d-flex align-content-center align-content-lg-stretch">
 				<div class="container">
 					<p>Juan Ruocco es escritor y guionista. Nació en 1987 en la Ciudad de Buenos Aires. Estudió Filosofía en la UBA.</p>
-					<p>Escribe para el suplemento No del diario Página/12. También publicó textos en el diario El Cronista y en las revistas Apertura, Nueva Sociedad y Cenital. Escribió para Canal Encuentro y Po-ka. Conduce Desencriptados, un podcast sobre criptomonedas para Congo. Escribe de forma regular en su blog <a class="links" href="https://realjuanruocco.substack.com/">realjuanruocco.substack.com</a></p>
+					<p>Escribe para el suplemento No del diario Página/12. También publicó textos en el diario El Cronista y en las revistas Apertura, Nueva Sociedad y Cenital. Escribió para Canal Encuentro y Po-ka. Conduce Desencriptados, un podcast sobre criptomonedas para Congo.</p> 
+					<p>Escribe de forma regular en su blog <a class="links" href="https://realjuanruocco.substack.com/">realjuanruocco.substack.com</a></p>
 					<p>En 2012 cofundó Velociraptors, una revista que articula ciencia y sociedad con cultura pop. En 2019 publicó Autopista al espacio (Casa Editorial Neptuno), un libro de cuentos de ciencia ficción y ficción extraña, y en 2021 la nouvelle 3220 (Azul Francia Editorial), que trata sobre el coming of age de dos jovenes de clase media.</p> 
 					<p>Vive en el barrio de Agronomía de la Ciudad de Buenos Aires, junto con Agustina, Galia y Neptuno.</p>
 				</div>
