--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Somos una editorial que diseña, produce y publica de forma conjunta con autores que están dando sus primeros pasos.">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-	<link rel="icon" href="fotos/avatar.png">
+	<link rel="shortcut icon" href="fotos/favicon.ico">
 </head>
 <body>
 	<!-- Header -->
